--- a/Assignment1- 2D Scene Rendering/assignment1.html
+++ b/Assignment1- 2D Scene Rendering/assignment1.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
-
-<html>
-  <head>
-    <title>Scenery</title>
-    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-    <script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
-    <script type="text/javascript" src="assignment1.js"></script>
-  </head>
-
-  <body onload="webGLStart();">
-    <div class="row">
-        <div class="column">
-            <canvas
-            id="scenery"
-            style="border: none"
-            width="900"
-            height="900"
-            ></canvas>
-        </div>
-        <div class="column">
-            <h4>Change Draw Mode:</h4>
-            <!-- changeView() is the callback function for the button press event with the mode of drawing passed to JS as parameter -->
-            <button onclick="changeView('p')">Point View</button>
-            <button onclick="changeView('w')">Wireframe View</button>
-            <button onclick="changeView('s')">Solid View</button>
-        </div>
-    </div>
-
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Assignment 1 – 2D Scene Rendering</title>
+  <script src="glMatrix-0.9.5.min.js"></script>
+  <script src="assignment1.js"></script>
+  <style>
+    html,body{
+      margin:0;padding:0;width:100%;height:100%;
+      background:#000;color:#fff;
+      font-family:"Segoe UI",sans-serif;
+      display:flex;flex-direction:column;
+      align-items:center;justify-content:center;
+    }
+    canvas{
+      aspect-ratio:1/1;width:90vmin;height:auto;border:none;display:block;
+    }
+    .controls{
+      margin-top:1rem;text-align:center;
+    }
+    .controls h4{
+      margin:0 0 6px;font-weight:600;font-size:.9rem;
+    }
+    button{
+      margin:3px;
+      background:#0a84ff;color:#fff;
+      border:none;border-radius:6px;
+      padding:6px 12px;cursor:pointer;font-size:.85rem;
+    }
+    button:hover{background:#0071e3;}
+  </style>
+</head>
+<body onload="webGLStart();">
+  <canvas id="scenery" width="900" height="900"></canvas>
+  <div class="controls">
+    <h4>Draw Mode</h4>
+    <button onclick="changeView('p')">Point</button>
+    <button onclick="changeView('w')">Wireframe</button>
+    <button onclick="changeView('s')">Solid</button>
+  </div>
+</body>
 </html>
