--- a/Assignment3- Reflection Mapping/index.html
+++ b/Assignment3- Reflection Mapping/index.html
@@ -1,62 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Assignment 3</title>
-    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-    <script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
-    <style>
-      body {
-        text-align: center;
-        background: #f4f4f4;
-        font-family: "Segoe UI", Arial, sans-serif;
-      }
-      canvas {
-        border: none;
-        background: #000;
-        margin-top: 20px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-        border-radius: 8px;
-      }
-      #controls {
-        margin-top: 15px;
-      }
-      #instructions {
-        color: #333;
-        font-size: 15px;
-        margin-bottom: 8px;
-      }
-      #rotateBtn {
-        background-color: #0078d7;
-        color: white;
-        border: none;
-        border-radius: 6px;
-        padding: 10px 18px;
-        font-size: 15px;
-        cursor: pointer;
-        transition: background-color 0.2s ease, transform 0.1s ease;
-      }
-      #rotateBtn:hover {
-        background-color: #005fa3;
-      }
-      #rotateBtn:active {
-        transform: scale(0.97);
-      }
-    </style>
-  </head>
-
-  <body onload="webGLStart();">
-    <canvas
-      id="Assn3-canvas"
-      width="600"
-      height="600"
-    ></canvas>
-
-    <div id="controls">
-      <p id="instructions">
-        Click the button below to start or stop automatic camera rotation:
-      </p>
-      <button id="rotateBtn">Start Auto Rotation</button>
-    </div>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Assignment 3 – Reflection & Texture Mapping</title>
+  <script src="glMatrix-0.9.5.min.js"></script>
+  <script src="main.js"></script>
+  <style>
+    html,body{
+      margin:0;padding:0;width:100%;height:100%;
+      background:#000;color:#fff;
+      font-family:"Segoe UI",sans-serif;
+      display:flex;flex-direction:column;
+      align-items:center;justify-content:center;
+    }
+    canvas{
+      aspect-ratio:1/1;width:90vmin;height:auto;border:none;display:block;
+    }
+    .controls{text-align:center;margin-top:1rem;}
+    p{margin:0 0 8px;font-size:.9rem;}
+    button{
+      background:#0a84ff;color:#fff;
+      border:none;border-radius:6px;
+      padding:7px 14px;cursor:pointer;font-size:.9rem;
+    }
+    button:hover{background:#0071e3;}
+  </style>
+</head>
+<body onload="webGLStart();">
+  <canvas id="Assn3-canvas" width="600" height="600"></canvas>
+  <div class="controls">
+    <p>Toggle camera rotation:</p>
+    <button id="rotateBtn">Start Auto Rotation</button>
+  </div>
+</body>
 </html>
