--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CS360 – Computer Graphics Portfolio | Anushka Singh</title>
+  <title>CS360 – Computer Graphics | Anushka Singh</title>
 
   <style>
     html, body {
